argocd/manifests/everlyera/base/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: everlyera-redirect-https
  namespace: everlyera
spec:
  redirectScheme:
    scheme: https
    permanent: true
