argocd/manifests/everlyera/base/service-imgproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: everlyera-imgproxy
  namespace: everlyera
spec:
  selector: { app: everlyera-imgproxy }
  ports:
    - { name: http, port: 8080, targetPort: 8080 }
