argocd/manifests/everlyera/base/service-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: everlyera-minio
  namespace: everlyera
spec:
  selector: { app: everlyera-minio }
  ports:
    - { name: s3, port: 9000, targetPort: 9000 }
    - { name: console, port: 9001, targetPort: 9001 }
