argocd/manifests/everlyera/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: everlyera-postgres
  namespace: everlyera
spec:
  selector: { app: everlyera-postgres }
  ports:
    - { name: pg, port: 5432, targetPort: 5432 }
