argocd/manifests/everlyera/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: everlyera-web
  namespace: everlyera
spec:
  selector: { app: everlyera-web }
  ports:
    - { name: http, port: 80, targetPort: 3000 }
