argocd/manifests/everlyera/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: everlyera-ingress
  namespace: everlyera
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: everlyera.com
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: www.everlyera.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - everlyera.com
        - www.everlyera.com
  rules:
    - host: everlyera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: everlyera-web
                port: { number: 80 }
    - host: www.everlyera.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: everlyera-web
                port: { number: 80 }
